src/compiletest/qcell_noalloc-11.stderr
error[E0502]: cannot borrow `owner` as immutable because it is also borrowed as mutable
  --> src/compiletest/qcell_noalloc-11.rs:15:10
   |
14 |     let c1mutref = owner.as_mut().rw(&c1);
   |                    -------------- mutable borrow occurs here
15 |     test(owner.as_ref());    // Compile error
   |          ^^^^^^^^^^^^^^ immutable borrow occurs here
16 |     *c1mutref += 1;
   |     -------------- mutable borrow later used here
